Bug 1222851 - Keep the one dropped frame prior the first one to prime the decoder. r=bryce

Some audio decoders, such as AAC and Opus have a need for a pre-roll content. As such, in order to be able to fully get the content of the first frame we keep the frame just prior that would have normally been dropped.

We set this frame to have a duration of 1us so that it will be dropped later by the decoding pipeline. The starting time of the first frame is adjusted so that we have continuous data, without gap in the buffered range.

Differential Revision: https://phabricator.services.mozilla.com/D20322